Fix text cut off while printing

--- a/jumbotron.css
+++ b/jumbotron.css
@@ -121,4 +121,8 @@ pre {
   p > img {
 
   }
+
+  .navbar {
+    display: none;
+  }
 }
